syntax = "proto3";
package seiprotocol.seichain.mint;

option go_package = "github.com/sei-protocol/sei-chain/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the most recent
message Minter {
  string last_mint_amount = 1 [
    (gogoproto.moretags) = "yaml:\"last_mint_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
    ];
  string last_mint_date = 2 [
    (gogoproto.moretags) = "yaml:\"last_mint_date\""
  ];
  int64 last_mint_height = 3 [
    (gogoproto.moretags) = "yaml:\"last_mint_height\""
  ];
  string denom = 4 [
    (gogoproto.moretags) = "yaml:\"denom\""
  ];
}

message ScheduledTokenRelease {
  string date = 1; // yyyy-mm-dd
  int64 token_release_amount = 2;
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // List of token release schedules
  repeated ScheduledTokenRelease token_release_schedule = 2 [
    (gogoproto.moretags) = "yaml:\"token_release_schedule\"",
    (gogoproto.nullable) = false
  ];
}

